--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ fetch('/chat?prompt=cat&model=@cf/stabilityai/stable-diffusion-xl-base-1.0')
 
     <!-- Credits -->
     <footer>
-      Powered by <a href="https://github.com/vauth/imageai" target="_blank">Imageai</a>
+      Made with ❤️‍🩹 by <a href="https://t.me/AgainOwner" target="_blank">कैलाश</a>
     </footer>
   </div>
 
